BooksPicker Image Button added. Sidebar overflow/non-scrolling problem fixed.

--- a/src/webapp/styles/browse.css
+++ b/src/webapp/styles/browse.css
@@ -14,10 +14,12 @@
     z-index:    1;
     position:   fixed;
     top:        1em;
-    right:      -1px;
+    right:      3px;
     width:      20em;
     background: #FFFCE6;
     border:     1px solid #fcd1ac;
+	overflow:auto;
+	bottom:0px;
 }
 
 #schedule-preview-pane > div {
@@ -348,4 +350,21 @@ div.comments div.message {
 div.comments div.input {
 	display: none;
 	padding: 4px;
+}
+
+#bookspicker-button a {
+	display:block;
+	width: 150px;
+	height: 45px;
+	background: url(http://bookspicker.mit.edu/images/booksPickerButton.png) 0 0 no-repeat;
+	text-decoration: none;
+	margin: 0 auto;
+}
+
+#bookspicker-button a:hover {
+	background:url(http://bookspicker.mit.edu/images/booksPickerButton_over.png) 0 0 no-repeat;;
+}
+
+#bookspicker-button a:active {
+	background:url(http://bookspicker.mit.edu/images/booksPickerButton_down.png) 0 0 no-repeat;;
 }
